<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/ic_cloud_refresh" />

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/ohnoo" />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/somethingwentwrong" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tryagain"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:layout_centerInParent="true"
                android:text="@string/retry"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>



    </LinearLayout>
    </LinearLayout>
</RelativeLayout>