<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.Toolbar
            android:layout_alignParentTop="true"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:id="@+id/toolbar"
            app:title="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:elevation="2dp" />


        <LinearLayout
            android:padding="@dimen/gap20"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/General"
                app:textAllCaps="true"
                android:letterSpacing="@dimen/subtitleltrSpace"
                android:textColor="@color/colorAccent"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/languageContainer"
                android:padding="@dimen/gap5"
                android:layout_marginTop="@dimen/gap20"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:letterSpacing="@dimen/subtitleltrSpace"
                    android:textColor="@color/secondaryColor"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/selectedLocale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="@dimen/subtitleltrSpace"
                    android:textColor="@color/secondaryColor"
                    android:textSize="15sp"
                    android:textStyle="normal"/>



            </LinearLayout>








        </LinearLayout>


    </RelativeLayout>
</layout>